<resources>
    <string name="app_name">Calculator App</string>
    <string name="string_factorial">x!</string>
    <string name="string_square_root">√</string>
    <string name="string_on_power">xʸ</string>
    <string name="string_ac">AC</string>
    <string name="string_one">1</string>
    <string name="string_two">2</string>
    <string name="string_three">3</string>
    <string name="string_division">÷</string>
    <string name="string_four">4</string>
    <string name="string_five">5</string>
    <string name="string_six">6</string>
    <string name="string_multiplier">x</string>
    <string name="string_seven">7</string>
    <string name="string_eight">8</string>
    <string name="string_nine">9</string>
    <string name="string_minus">-</string>
    <string name="string_null">0</string>
    <string name="string_dot">.</string>
    <string name="string_result">=</string>
    <string name="string_plus">+</string>
</resources>
