<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:ems="10"
        android:id="@+id/edit_text_field"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:hint="@string/string_null" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="4" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_factorial"
        android:id="@+id/button_factorial"
        android:layout_row="3"
        android:layout_column="0"
        android:backgroundTint="#d3d3d3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_square_root"
        android:id="@+id/button_square"
        android:layout_row="3"
        android:layout_column="1"
        android:backgroundTint="#d3d3d3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_on_power"
        android:id="@+id/button_on_power"
        android:layout_row="3"
        android:layout_column="2"
        android:backgroundTint="#d3d3d3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_ac"
        android:id="@+id/button_ac"
        android:layout_row="3"
        android:layout_column="3"
        android:backgroundTint="#d3d3d3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:id="@+id/button_1"
        android:text="@string/string_one"
        android:layout_row="4"
        android:layout_column="0"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_two"
        android:id="@+id/button_2"
        android:layout_row="4"
        android:layout_column="1"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_three"
        android:id="@+id/button_3"
        android:layout_row="4"
        android:layout_column="2"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_division"
        android:id="@+id/button_divide"
        android:layout_row="4"
        android:layout_column="3"
        android:backgroundTint="#d3d3d3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_four"
        android:id="@+id/button_4"
        android:layout_row="5"
        android:layout_column="0"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_five"
        android:id="@+id/button_5"
        android:layout_row="5"
        android:layout_column="1"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_six"
        android:id="@+id/button_6"
        android:layout_row="5"
        android:layout_column="2"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_multiplier"
        android:id="@+id/button_multiplier"
        android:layout_row="5"
        android:layout_column="3"
        android:backgroundTint="#d3d3d3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_seven"
        android:id="@+id/button_7"
        android:layout_row="6"
        android:layout_column="0"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_eight"
        android:id="@+id/button_8"
        android:layout_row="6"
        android:layout_column="1"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_nine"
        android:id="@+id/button_9"
        android:layout_row="6"
        android:layout_column="2"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_minus"
        android:id="@+id/button_minus"
        android:layout_row="6"
        android:layout_column="3"
        android:backgroundTint="#d3d3d3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_null"
        android:id="@+id/button_0"
        android:layout_row="7"
        android:layout_column="0"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_dot"
        android:id="@+id/button_dot"
        android:layout_row="7"
        android:layout_column="1"
        android:backgroundTint="#f3f3f3" />

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_result"
        android:id="@+id/button_result"
        android:layout_row="7"
        android:layout_column="2"
        android:backgroundTint="#4d8df7"/>

    <Button
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:text="@string/string_plus"
        android:id="@+id/button_plus"
        android:layout_row="7"
        android:layout_column="3"
        android:backgroundTint="#d3d3d3" />

</GridLayout>